--- a/src/AgnesBot/AgnesBot.csproj
+++ b/src/AgnesBot/AgnesBot.csproj
@@ -51,8 +51,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Core\AgnesBotRunner.cs" />
-    <Compile Include="Core\IModule.cs" />
-    <Compile Include="Modules\TimeModule.cs" />
+    <Compile Include="Core\BaseModule.cs" />
+    <Compile Include="Core\Configuration.cs" />
+    <Compile Include="Core\IHandler.cs" />
+    <Compile Include="Modules\TimeAndDateModule.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
