* Remove idea of modules.
Modified   src/AgnesBot/AgnesBot.csproj
Modified   src/AgnesBot/Core/AgnesBotRunner.cs
Deleted    src/AgnesBot/Core/AgnesConfigurationManager.cs
Modified   src/AgnesBot/Core/BaseHandler.cs
Deleted    src/AgnesBot/Core/BaseModule.cs
Deleted    src/AgnesBot/Modules/TimeAndDateModule.cs
Modified   src/AgnesBot/Program.cs
Add        src/AgnesBot/Core/ConfigurationManager.cs
Add        src/AgnesBot/MessageHandlers/TimeMessageHandler.cs

--- a/src/AgnesBot/AgnesBot.csproj
+++ b/src/AgnesBot/AgnesBot.csproj
@@ -59,11 +59,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Core\AgnesBotRunner.cs" />
-    <Compile Include="Core\BaseModule.cs" />
-    <Compile Include="Core\AgnesConfigurationManager.cs" />
+    <Compile Include="Core\ConfigurationManager.cs" />
     <Compile Include="Core\BaseHandler.cs" />
     <Compile Include="Core\IoC.cs" />
-    <Compile Include="Modules\TimeAndDateModule.cs" />
+    <Compile Include="MessageHandlers\TimeMessageHandler.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
