Modified   src/AgnesBot/AgnesBot.csproj Modified   src/AgnesBot/Core/AgnesBotRunner.cs Deleted    src/AgnesBot/Core/BaseHandler.cs Deleted    src/AgnesBot/MessageHandlers/TimeMessageHandler.cs Modified   src/AgnesBot/Program.cs Add        src/AgnesBot/Core/BaseModule.cs Add        src/AgnesBot/Modules/TimeModule.cs

--- a/src/AgnesBot/AgnesBot.csproj
+++ b/src/AgnesBot/AgnesBot.csproj
@@ -60,9 +60,9 @@
   <ItemGroup>
     <Compile Include="Core\AgnesBotRunner.cs" />
     <Compile Include="Core\ConfigurationManager.cs" />
-    <Compile Include="Core\BaseHandler.cs" />
+    <Compile Include="Core\BaseModule.cs" />
     <Compile Include="Core\IoC.cs" />
-    <Compile Include="MessageHandlers\TimeMessageHandler.cs" />
+    <Compile Include="Modules\TimeModule.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
