Modified   src/AgnesBot/AgnesBot.csproj Deleted    src/AgnesBot/Core/AgnesBotRunner.cs Deleted    src/AgnesBot/Core/BaseModule.cs Modified   src/AgnesBot/Modules/TimeModule.cs Modified   src/AgnesBot/Program.cs Add        src/AgnesBot/AgnesBotRunner.cs Add        src/AgnesBot/Modules/BaseModule.cs

--- a/src/AgnesBot/AgnesBot.csproj
+++ b/src/AgnesBot/AgnesBot.csproj
@@ -58,9 +58,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Core\AgnesBotRunner.cs" />
+    <Compile Include="AgnesBotRunner.cs" />
     <Compile Include="Core\ConfigurationManager.cs" />
-    <Compile Include="Core\BaseModule.cs" />
+    <Compile Include="Modules\BaseModule.cs" />
     <Compile Include="Core\IoC.cs" />
     <Compile Include="Modules\TimeModule.cs" />
     <Compile Include="Program.cs" />
