* Change arch so that modules are isolated.
Deleted    src/AgnesBot.Domain/AgnesBot.Domain.csproj
Deleted    src/AgnesBot.Domain/Comment.cs
Deleted    src/AgnesBot.Domain/Interfaces/ICommentRepository.cs
Deleted    src/AgnesBot.Domain/Properties/AssemblyInfo.cs
Deleted    src/AgnesBot.Repositories/AgnesBot.Repositories.csproj
Deleted    src/AgnesBot.Repositories/BaseRepository.cs
Deleted    src/AgnesBot.Repositories/CommentRepository.cs
Deleted    src/AgnesBot.Repositories/Properties/AssemblyInfo.cs
Modified   src/AgnesBot.Tests/AgnesBot.Tests.csproj
Deleted    src/AgnesBot.Tests/AgnesBotRunnerFixture.cs
Deleted    src/AgnesBot.Tests/TimeModuleFixture.cs
Modified   src/AgnesBot.sln
Deleted    src/AgnesBot/AgnesBot.csproj
Deleted    src/AgnesBot/App.config-default
Deleted    src/AgnesBot/BotRunner.cs
Deleted    src/AgnesBot/Core/ConfigurationManager.cs
Deleted    src/AgnesBot/Core/IoC.cs
Deleted    src/AgnesBot/Core/IrcConnection.cs
Deleted    src/AgnesBot/Core/IrcMessage.cs
Deleted    src/AgnesBot/Core/SystemTime.cs
Deleted    src/AgnesBot/Modules/BaseModule.cs
Deleted    src/AgnesBot/Modules/CommentModule.cs
Deleted    src/AgnesBot/Modules/TimeModule.cs
Deleted    src/AgnesBot/Program.cs
Deleted    src/AgnesBot/Properties/AssemblyInfo.cs
Add        src/AgnesBot.Core/AgnesBot.Core.csproj
Add        src/AgnesBot.Core/Irc/IrcClient.cs
Add        src/AgnesBot.Core/Irc/IrcMessageData.cs
Add        src/AgnesBot.Core/Irc/ReceiveType.cs
Add        src/AgnesBot.Core/Irc/SendType.cs
Add        src/AgnesBot.Core/Modules/BaseModule.cs
Add        src/AgnesBot.Core/Modules/IModule.cs
Add        src/AgnesBot.Core/Properties/AssemblyInfo.cs
Add        src/AgnesBot.Core/Utils/ConfigurationManager.cs
Add        src/AgnesBot.Core/Utils/IInstaller.cs
Add        src/AgnesBot.Core/Utils/IoC.cs
Add        src/AgnesBot.Core/Utils/SystemTime.cs
Add        src/AgnesBot.Modules.CommentModule/AgnesBot.Modules.CommentModule.csproj
Add        src/AgnesBot.Modules.CommentModule/Comment.cs
Add   

--- a/src/AgnesBot.Core/AgnesBot.Core.csproj
+++ b/src/AgnesBot.Core/AgnesBot.Core.csproj
@@ -5,11 +5,11 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{DD575818-5B1F-4B55-B1F2-5FCB4BEC6E77}</ProjectGuid>
+    <ProjectGuid>{CE05A9C0-91A6-475A-A2F8-0137EB88EE30}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>AgnesBot.Repositories</RootNamespace>
-    <AssemblyName>AgnesBot.Repositories</AssemblyName>
+    <RootNamespace>AgnesBot.Core</RootNamespace>
+    <AssemblyName>AgnesBot.Core</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -31,16 +31,17 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Newtonsoft.Json">
-      <HintPath>..\..\lib\Newtonsoft.Json.dll</HintPath>
+    <Reference Include="Autofac">
+      <HintPath>..\..\lib\Autofac.dll</HintPath>
     </Reference>
-    <Reference Include="Raven.Abstractions-3.5">
-      <HintPath>..\..\lib\Raven.Abstractions-3.5.dll</HintPath>
+    <Reference Include="Autofac.Configuration">
+      <HintPath>..\..\lib\Autofac.Configuration.dll</HintPath>
     </Reference>
-    <Reference Include="Raven.Client.Lightweight-3.5">
-      <HintPath>..\..\lib\Raven.Client.Lightweight-3.5.dll</HintPath>
+    <Reference Include="Meebey.SmartIrc4net">
+      <HintPath>..\..\lib\Meebey.SmartIrc4net.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -49,15 +50,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BaseRepository.cs" />
-    <Compile Include="CommentRepository.cs" />
+    <Compile Include="Utils\ConfigurationManager.cs" />
+    <Compile Include="Utils\IInstaller.cs" />
+    <Compile Include="Utils\IoC.cs" />
+    <Compile Include="Irc\IrcClient.cs" />
+    <Compile Include="Modules\BaseModule.cs" />
+    <Compile Include="Modules\IModule.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\AgnesBot.Domain\AgnesBot.Domain.csproj">
-      <Project>{0A407B9F-15E1-4043-A4E0-79027AD30175}</Project>
-      <Name>AgnesBot.Domain</Name>
-    </ProjectReference>
+    <Compile Include="Irc\IrcMessageData.cs" />
+    <Compile Include="Irc\ReceiveType.cs" />
+    <Compile Include="Irc\SendType.cs" />
+    <Compile Include="Utils\SystemTime.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
