--- a/src/AgnesBot.Modules.CommentModule/AgnesBot.Modules.CommentModule.csproj
+++ b/src/AgnesBot.Modules.CommentModule/AgnesBot.Modules.CommentModule.csproj
@@ -5,11 +5,11 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{0A407B9F-15E1-4043-A4E0-79027AD30175}</ProjectGuid>
+    <ProjectGuid>{22914356-0706-4E84-BB4D-C37AC51E3B41}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>AgnesBot.Domain</RootNamespace>
-    <AssemblyName>AgnesBot.Domain</AssemblyName>
+    <RootNamespace>AgnesBot.Modules.CommentModule</RootNamespace>
+    <AssemblyName>AgnesBot.Modules.CommentModule</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -31,6 +31,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Autofac, Version=2.3.2.632, Culture=neutral, PublicKeyToken=17863af14b0044da, processorArchitecture=MSIL" />
+    <Reference Include="Raven.Client.Lightweight-3.5">
+      <HintPath>..\..\lib\Raven.Client.Lightweight-3.5.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -41,8 +45,16 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Comment.cs" />
-    <Compile Include="Interfaces\ICommentRepository.cs" />
+    <Compile Include="CommentModule.cs" />
+    <Compile Include="CommentRepository.cs" />
+    <Compile Include="Installer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\AgnesBot.Core\AgnesBot.Core.csproj">
+      <Project>{CE05A9C0-91A6-475A-A2F8-0137EB88EE30}</Project>
+      <Name>AgnesBot.Core</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
