--- a/src/AgnesBot.Server/AgnesBot.Server.csproj
+++ b/src/AgnesBot.Server/AgnesBot.Server.csproj
@@ -8,8 +8,8 @@
     <ProjectGuid>{D820EA05-1167-49F8-A98D-99E2A57E0469}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>AgnesBot</RootNamespace>
-    <AssemblyName>AgnesBot</AssemblyName>
+    <RootNamespace>AgnesBot.Server</RootNamespace>
+    <AssemblyName>AgnesBot.Server</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <FileUpgradeFlags>
@@ -85,14 +85,6 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BotRunner.cs" />
-    <Compile Include="Core\ConfigurationManager.cs" />
-    <Compile Include="Core\IrcConnection.cs" />
-    <Compile Include="Core\IrcMessage.cs" />
-    <Compile Include="Core\SystemTime.cs" />
-    <Compile Include="Modules\BaseModule.cs" />
-    <Compile Include="Core\IoC.cs" />
-    <Compile Include="Modules\CommentModule.cs" />
-    <Compile Include="Modules\TimeModule.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -114,13 +106,13 @@
     </BootstrapperPackage>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\AgnesBot.Domain\AgnesBot.Domain.csproj">
-      <Project>{0A407B9F-15E1-4043-A4E0-79027AD30175}</Project>
-      <Name>AgnesBot.Domain</Name>
+    <ProjectReference Include="..\AgnesBot.Core\AgnesBot.Core.csproj">
+      <Project>{CE05A9C0-91A6-475A-A2F8-0137EB88EE30}</Project>
+      <Name>AgnesBot.Core</Name>
     </ProjectReference>
-    <ProjectReference Include="..\AgnesBot.Repositories\AgnesBot.Repositories.csproj">
-      <Project>{DD575818-5B1F-4B55-B1F2-5FCB4BEC6E77}</Project>
-      <Name>AgnesBot.Repositories</Name>
+    <ProjectReference Include="..\AgnesBot.Modules.CommentModule\AgnesBot.Modules.CommentModule.csproj">
+      <Project>{22914356-0706-4E84-BB4D-C37AC51E3B41}</Project>
+      <Name>AgnesBot.Modules.CommentModule</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
