Modified   src/AgnesBot.Modules.CommentModule/AgnesBot.Modules.CommentModule.csproj Deleted    src/AgnesBot.Modules.CommentModule/Installer.cs Modified   src/AgnesBot.Server/Program.cs Add        src/AgnesBot.Modules.CommentModule/CommentModuleInstaller.cs

--- a/src/AgnesBot.Modules.CommentModule/AgnesBot.Modules.CommentModule.csproj
+++ b/src/AgnesBot.Modules.CommentModule/AgnesBot.Modules.CommentModule.csproj
@@ -47,7 +47,7 @@
     <Compile Include="Comment.cs" />
     <Compile Include="CommentModule.cs" />
     <Compile Include="CommentRepository.cs" />
-    <Compile Include="Installer.cs" />
+    <Compile Include="CommentModuleInstaller.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
