Modified   src/AgnesBot.Core/Modules/BaseModule.cs Modified   src/AgnesBot.Modules.CommentModule.Tests/CommentModuleFixture.cs Modified   src/AgnesBot.Modules.CommentModule/AgnesBot.Modules.CommentModule.csproj Deleted    src/AgnesBot.Modules.CommentModule/Comment.cs Modified   src/AgnesBot.Modules.CommentModule/CommentModule.cs Modified   src/AgnesBot.Modules.CommentModule/CommentModuleInstaller.cs Deleted    src/AgnesBot.Modules.CommentModule/CommentRepository.cs Modified   src/AgnesBot.Server/BotRunner.cs Modified   src/AgnesBot.Tests/Server/BotRunnerFixture.cs Add        src/AgnesBot.Modules.CommentModule/Domain/Comment.cs Add        src/AgnesBot.Modules.CommentModule/Domain/CommentRepository.cs

--- a/src/AgnesBot.Modules.CommentModule/AgnesBot.Modules.CommentModule.csproj
+++ b/src/AgnesBot.Modules.CommentModule/AgnesBot.Modules.CommentModule.csproj
@@ -44,9 +44,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Comment.cs" />
+    <Compile Include="Domain\Comment.cs" />
     <Compile Include="CommentModule.cs" />
-    <Compile Include="CommentRepository.cs" />
+    <Compile Include="Domain\CommentRepository.cs" />
     <Compile Include="CommentModuleInstaller.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
