Modified   src/AgnesBot.Core/AgnesBot.Core.csproj Deleted    src/AgnesBot.Core/Irc/IrcClient.cs Deleted    src/AgnesBot.Core/Irc/IrcMessageData.cs Deleted    src/AgnesBot.Core/Irc/ReceiveType.cs Deleted    src/AgnesBot.Core/Irc/SendType.cs Modified   src/AgnesBot.Core/Modules/BaseModule.cs Modified   src/AgnesBot.Core/Modules/IModule.cs Modified   src/AgnesBot.Modules.CommentModule.Tests/CommentModuleFixture.cs Modified   src/AgnesBot.Modules.CommentModule/CommentModule.cs Modified   src/AgnesBot.Server/BotRunner.cs Modified   src/AgnesBot.Server/Program.cs Modified   src/AgnesBot.Tests/Server/BotRunnerFixture.cs Add        src/AgnesBot.Core/IrcUtils/IrcClient.cs Add        src/AgnesBot.Core/IrcUtils/IrcMessageData.cs Add        src/AgnesBot.Core/IrcUtils/ReceiveType.cs Add        src/AgnesBot.Core/IrcUtils/SendType.cs

--- a/src/AgnesBot.Core/AgnesBot.Core.csproj
+++ b/src/AgnesBot.Core/AgnesBot.Core.csproj
@@ -57,13 +57,13 @@
     <Compile Include="Utils\ConfigurationManager.cs" />
     <Compile Include="Utils\IInstaller.cs" />
     <Compile Include="Utils\IoC.cs" />
-    <Compile Include="Irc\IrcClient.cs" />
+    <Compile Include="IrcUtils\IrcClient.cs" />
     <Compile Include="Modules\BaseModule.cs" />
     <Compile Include="Modules\IModule.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Irc\IrcMessageData.cs" />
-    <Compile Include="Irc\ReceiveType.cs" />
-    <Compile Include="Irc\SendType.cs" />
+    <Compile Include="IrcUtils\IrcMessageData.cs" />
+    <Compile Include="IrcUtils\ReceiveType.cs" />
+    <Compile Include="IrcUtils\SendType.cs" />
     <Compile Include="Utils\SystemTime.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
