* Swap to castle * Implement unit of work * Add comment search functionality
Deleted    lib/Autofac.Configuration.dll
Deleted    lib/Autofac.dll
Modified   src/AgnesBot.Core/AgnesBot.Core.csproj
Modified   src/AgnesBot.Core/Data/BaseRepository.cs
Deleted    src/AgnesBot.Core/Utils/IInstaller.cs
Modified   src/AgnesBot.Core/Utils/IoC.cs
Modified   src/AgnesBot.Modules.CommentModule.Tests/CommentModuleFixture.cs
Modified   src/AgnesBot.Modules.CommentModule/AgnesBot.Modules.CommentModule.csproj
Modified   src/AgnesBot.Modules.CommentModule/CommentModule.cs
Modified   src/AgnesBot.Modules.CommentModule/CommentModuleInstaller.cs
Modified   src/AgnesBot.Modules.CommentModule/Domain/CommentRepository.cs
Modified   src/AgnesBot.Server/AgnesBot.Server.csproj
Modified   src/AgnesBot.Server/BotRunner.cs
Modified   src/AgnesBot.Server/Program.cs
Modified   src/AgnesBot.Tests/AgnesBot.Tests.csproj
Modified   src/AgnesBot.Tests/Server/BotRunnerFixture.cs
Add        lib/Castle.Core.dll
Add        lib/Castle.Windsor.dll
Add        src/AgnesBot.Core/UnitOfWork/IUnitOfWork.cs
Add        src/AgnesBot.Core/UnitOfWork/IUnitOfWorkFactory.cs
Add        src/AgnesBot.Core/UnitOfWork/UnitOfWork.cs
Add        src/AgnesBot.Core/UnitOfWork/UnitOfWorkFactory.cs

--- a/src/AgnesBot.Core/AgnesBot.Core.csproj
+++ b/src/AgnesBot.Core/AgnesBot.Core.csproj
@@ -31,11 +31,11 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Autofac">
-      <HintPath>..\..\lib\Autofac.dll</HintPath>
+    <Reference Include="Castle.Core">
+      <HintPath>..\..\lib\Castle.Core.dll</HintPath>
     </Reference>
-    <Reference Include="Autofac.Configuration">
-      <HintPath>..\..\lib\Autofac.Configuration.dll</HintPath>
+    <Reference Include="Castle.Windsor">
+      <HintPath>..\..\lib\Castle.Windsor.dll</HintPath>
     </Reference>
     <Reference Include="Meebey.SmartIrc4net">
       <HintPath>..\..\lib\Meebey.SmartIrc4net.dll</HintPath>
@@ -55,7 +55,6 @@
   <ItemGroup>
     <Compile Include="Data\BaseRepository.cs" />
     <Compile Include="Utils\ConfigurationManager.cs" />
-    <Compile Include="Utils\IInstaller.cs" />
     <Compile Include="Utils\IoC.cs" />
     <Compile Include="IrcUtils\IrcClient.cs" />
     <Compile Include="Modules\BaseModule.cs" />
@@ -64,7 +63,11 @@
     <Compile Include="IrcUtils\IrcMessageData.cs" />
     <Compile Include="IrcUtils\ReceiveType.cs" />
     <Compile Include="IrcUtils\SendType.cs" />
+    <Compile Include="UnitOfWork\IUnitOfWork.cs" />
+    <Compile Include="UnitOfWork\IUnitOfWorkFactory.cs" />
     <Compile Include="Utils\SystemTime.cs" />
+    <Compile Include="UnitOfWork\UnitOfWork.cs" />
+    <Compile Include="UnitOfWork\UnitOfWorkFactory.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
