--- a/src/AgnesBot.Modules.CommentModule/AgnesBot.Modules.CommentModule.csproj
+++ b/src/AgnesBot.Modules.CommentModule/AgnesBot.Modules.CommentModule.csproj
@@ -31,7 +31,12 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Autofac, Version=2.3.2.632, Culture=neutral, PublicKeyToken=17863af14b0044da, processorArchitecture=MSIL" />
+    <Reference Include="Castle.Core">
+      <HintPath>..\..\lib\Castle.Core.dll</HintPath>
+    </Reference>
+    <Reference Include="Castle.Windsor">
+      <HintPath>..\..\lib\Castle.Windsor.dll</HintPath>
+    </Reference>
     <Reference Include="Raven.Client.Lightweight-3.5">
       <HintPath>..\..\lib\Raven.Client.Lightweight-3.5.dll</HintPath>
     </Reference>
