--- a/src/AgnesBot.Server/AgnesBot.Server.csproj
+++ b/src/AgnesBot.Server/AgnesBot.Server.csproj
@@ -62,6 +62,8 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\lib\Autofac.Configuration.dll</HintPath>
     </Reference>
+    <Reference Include="Castle.Core, Version=2.5.1.0, Culture=neutral, PublicKeyToken=407dd0808d44fbdc, processorArchitecture=MSIL" />
+    <Reference Include="Castle.Windsor, Version=2.5.1.0, Culture=neutral, PublicKeyToken=407dd0808d44fbdc, processorArchitecture=MSIL" />
     <Reference Include="Meebey.SmartIrc4net, Version=0.4.0.37291, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\lib\Meebey.SmartIrc4net.dll</HintPath>
