* Add .net 4.0 raven client * Add index for Comments so that we can search on Text. * Modify program start to use index creation definitions.
Deleted    lib/Raven.Abstractions-3.5.dll
Deleted    lib/Raven.Client.Lightweight-3.5.dll
Added      lib/Raven.Client.Lightweight.dll
Modified   src/AgnesBot.Core/AgnesBot.Core.csproj
Modified   src/AgnesBot.Modules.CommentModule.Tests/AgnesBot.Modules.CommentModule.Tests.csproj
Modified   src/AgnesBot.Modules.CommentModule.Tests/CommentModuleFixture.cs
Modified   src/AgnesBot.Modules.CommentModule/AgnesBot.Modules.CommentModule.csproj
Modified   src/AgnesBot.Modules.CommentModule/CommentModule.cs
Modified   src/AgnesBot.Modules.CommentModule/Domain/CommentRepository.cs
Modified   src/AgnesBot.Server/AgnesBot.Server.csproj
Modified   src/AgnesBot.Server/Program.cs
Modified   src/AgnesBot.Tests/AgnesBot.Tests.csproj
Add        lib/Raven.Abstractions.dll
Add        src/AgnesBot.Modules.CommentModule/Indexes/Comments_ByText.cs

--- a/src/AgnesBot.Core/AgnesBot.Core.csproj
+++ b/src/AgnesBot.Core/AgnesBot.Core.csproj
@@ -40,8 +40,8 @@
     <Reference Include="Meebey.SmartIrc4net">
       <HintPath>..\..\lib\Meebey.SmartIrc4net.dll</HintPath>
     </Reference>
-    <Reference Include="Raven.Client.Lightweight-3.5">
-      <HintPath>..\AgnesBot.Tests\bin\Debug\Raven.Client.Lightweight-3.5.dll</HintPath>
+    <Reference Include="Raven.Client.Lightweight">
+      <HintPath>..\..\lib\Raven.Client.Lightweight.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.configuration" />
@@ -68,6 +68,9 @@
     <Compile Include="Utils\SystemTime.cs" />
     <Compile Include="UnitOfWork\UnitOfWork.cs" />
     <Compile Include="UnitOfWork\UnitOfWorkFactory.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="RavenIndexes\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
