* Refactor the way handlers are added/used.
Modified   src/AgnesBot.Core/AgnesBot.Core.csproj
Modified   src/AgnesBot.Core/IrcUtils/IrcMessageData.cs
Modified   src/AgnesBot.Core/Modules/BaseModule.cs
Modified   src/AgnesBot.Modules.CommentModule.Tests/CommentModuleFixture.cs
Modified   src/AgnesBot.Modules.CommentModule/CommentModule.cs
Modified   src/AgnesBot.Modules.TinyUrlModule.Tests/TinyUrlModuleFixture.cs
Modified   src/AgnesBot.Modules.TinyUrlModule/TinyUrlModule.cs
Add        src/AgnesBot.Core/Modules/ModuleMessageHandler.cs

--- a/src/AgnesBot.Core/AgnesBot.Core.csproj
+++ b/src/AgnesBot.Core/AgnesBot.Core.csproj
@@ -54,6 +54,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Data\BaseRepository.cs" />
+    <Compile Include="Modules\ModuleMessageHandler.cs" />
     <Compile Include="Utils\ConfigurationManager.cs" />
     <Compile Include="Utils\IoC.cs" />
     <Compile Include="IrcUtils\IrcClient.cs" />
