--- a/src/AgnesBot.Modules.UrlAggregatorModule.Tests/AgnesBot.Modules.UrlAggregatorModule.Tests.csproj
+++ b/src/AgnesBot.Modules.UrlAggregatorModule.Tests/AgnesBot.Modules.UrlAggregatorModule.Tests.csproj
@@ -49,6 +49,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Domain\UrlFixture.cs" />
     <Compile Include="UrlAggregatorModuleFixture.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
