* Refactoring windsor registrations into installers. * Using convention over config to register *Service and *Repository by default for all Modules. * Remove all module installers as they are no longer needed. * Add newest unstable build raven client lib.

--- a/src/AgnesBot.Server/AgnesBot.Server.csproj
+++ b/src/AgnesBot.Server/AgnesBot.Server.csproj
@@ -83,8 +83,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BotRunner.cs" />
+    <Compile Include="Installers\ModuleInstaller.cs" />
+    <Compile Include="Installers\RavenInstaller.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Installers\Installer.cs" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include="Microsoft.Net.Client.3.5">
