--- a/src/AgnesBot.Modules.CommentModule/AgnesBot.Modules.QuoteModule.csproj
+++ b/src/AgnesBot.Modules.CommentModule/AgnesBot.Modules.QuoteModule.csproj
@@ -52,9 +52,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Repositories\IQuoteRepository.cs" />
     <Compile Include="Domain\Quote.cs" />
     <Compile Include="QuoteModule.cs" />
-    <Compile Include="Domain\QuoteRepository.cs" />
+    <Compile Include="Repositories\QuoteRepository.cs" />
     <Compile Include="Indexes\Quotes_ByText.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
