--- a/src/AgnesBot.Tests/AgnesBot.Tests.csproj
+++ b/src/AgnesBot.Tests/AgnesBot.Tests.csproj
@@ -58,7 +58,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Server\BotRunnerFixture.cs" />
+    <Compile Include="BotRunnerFixture.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
