--- a/src/AgnesBot.Core/AgnesBot.Core.csproj
+++ b/src/AgnesBot.Core/AgnesBot.Core.csproj
@@ -53,7 +53,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Modules\ModulePathUtil.cs" />
+    <Compile Include="Modules\ModuleUtil.cs" />
     <Compile Include="Repositories\BaseRepository.cs" />
     <Compile Include="Modules\ModuleMessageHandler.cs" />
     <Compile Include="Utils\ConfigurationManager.cs" />
